--- a/form.html
+++ b/form.html
@@ -14,12 +14,9 @@
         <label for="password">Password</label>
         <input type="password" name="password"  required><br>
         <label for="gender">Select your Gender : </label>
-        <input type="radio" name="gender" Value="Male" required>
-        <label for="male">Male</label>
-        <input type="radio" name="gender" value="Female" required>
-        <label for="Female">Female </label>
-        <input type="radio" name="gender" value="Other"  required>
-        <label for="other">other</label><br>
+        <label for="male"><input type="radio" name="gender" Value="Male" required>Male</label>
+        <label for="female"><input type="radio" name="gender" value="female" required>Female </label> 
+        <label for="other"><input type="radio" name="gender" value="other"  required>Other</label><br>
         <input type="submit">
     </form>
 </body>
